<resources>
    <string name="app_name">FacultyMobileProject</string>
    <!--    MainActivity-->
    <string name="faculty_id_text_view">Faculty Id:</string>
    <string name="faculty_LName_text_view">Faculty LName:</string>
    <string name="faculty_FName_text_view">Faculty FName:</string>
    <string name="faculty_salary_text_view">Faculty Salary:</string>
    <string name="faculty_bonus_text_view">Faculty Bonus:</string>
    <string name="display_bonus_text_view"></string>
    <string name="next_button">Next Faculty</string>
    <string name="prev_button">Previous Faculty</string>
    <string name="faculty_details_button">Faculty Details</string>
    <string name="all_faculty_button">All Faculty</string>

    <!--    FacultyActivity-->
    <string name="faculty_id_label_text_view">Faculty Id</string>
    <string name="faculty_id_edit_text"></string>
    <string name="faculty_fName_label_text_view">Faculty FName</string>
    <string name="faculty_fName_edit_text"></string>
    <string name="faculty_lName_label_text_view">Faculty LName</string>
    <string name="faculty_lName_edit_text"></string>
    <string name="faculty_salary_label_text_view">Faculty Salary</string>
    <string name="faculty_salary_edit_text"></string>
    <string name="faculty_rate_bonus_label_text_view">Faculty Rate Bonus</string>
    <string name="faculty_rate_bonus_edit_text"></string>
    <string name="faculty_amount_bonus_label_text_view">Faculty Amount Bonus</string>
    <string name="faculty_amount_bonus_text_view"></string>
    <string name="update_display_button">Update Faculty/Display Bonus</string>
</resources>