<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/faculty_id_text_view"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:text="@string/faculty_id_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/faculty_LName_text_view"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:text="@string/faculty_LName_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/faculty_id_text_view"
        app:layout_constraintStart_toStartOf="@+id/faculty_id_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_id_text_view"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/faculty_FName_text_view"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:text="@string/faculty_FName_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/faculty_LName_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/faculty_LName_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_LName_text_view"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/faculty_salary_text_view"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/faculty_salary_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_FName_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/faculty_FName_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_FName_text_view" />

    <TextView
        android:id="@+id/faculty_bonus_text_view"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:text="@string/faculty_bonus_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/faculty_salary_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_salary_text_view"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/display_bonus_text_view"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:text="@string/display_bonus_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/faculty_bonus_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/faculty_bonus_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_bonus_text_view"
        app:layout_constraintVertical_bias="0.099" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_bonus_text_view"
        app:layout_constraintVertical_bias="0.132">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="186dp"
            android:layout_height="56dp"
            android:text="@string/prev_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="186dp"
            android:layout_height="56dp"
            android:text="@string/next_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="406dp"
        android:layout_height="173dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/faculty_details_button"
            android:layout_width="286dp"
            android:layout_height="56dp"
            android:layout_marginTop="22dp"
            android:text="@string/faculty_details_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.178"
            tools:layout_editor_absoluteX="62dp" />

        <Button
            android:id="@+id/all_faculty_button"
            android:layout_width="286dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:text="@string/all_faculty_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/faculty_details_button"
            app:layout_constraintStart_toStartOf="@+id/faculty_details_button"
            app:layout_constraintTop_toBottomOf="@+id/faculty_details_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>